--- a/app/src/main/res/layout/notification_expanded.xml
+++ b/app/src/main/res/layout/notification_expanded.xml
@@ -4,30 +4,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/colorAccent"
     android:orientation="horizontal"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="10dp"
+    android:gravity="center_vertical"
+    android:paddingHorizontal="10dp"
+    android:paddingTop="6dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:tint="@color/lightningBolt"
+        android:src="@drawable/ic_lightning_bolt" />
 
     <LinearLayout
         android:background="@color/colorAccent"
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:text="Reminder"
+            android:text="@string/app_name"
             android:id="@+id/title"
             android:textColor="#ffffff" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:textSize="14sp"
             android:text="sadfasdf asdf asdf asdf asdf as"
             android:id="@+id/description"
