--- a/app/src/main/res/layout/notification_summary.xml
+++ b/app/src/main/res/layout/notification_summary.xml
@@ -16,11 +16,12 @@
         android:src="@drawable/ic_lightning_bolt" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="16sp"
-        android:text="Reminder"
+        android:paddingHorizontal="20dp"
+        android:textSize="20sp"
+        android:text="@string/app_name"
         android:id="@+id/title"
         android:textColor="#ffffff" />
 
